[deps] adding express

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "optionalDependencies": {
 			"socket.io": "*"
+		, "express": "*"
 		},
   "engines": {
     "node": "*"
